--- a/HTML 5/Guia de Galáxias/olhonegro.html
+++ b/HTML 5/Guia de Galáxias/olhonegro.html
@@ -39,7 +39,7 @@
 
     <p>
       <b>Outras galáxias:</b> <a href="./andromeda.html">Andromeda,</a
-      ><a href="#">Grande Nuvem de Magalhães.</a>
+      ><a href="./grandenuvem.html">Grande Nuvem de Magalhães.</a>
     </p>
   </body>
 </html>
