--- a/HTML 5/site-HTML/home.html
+++ b/HTML 5/site-HTML/home.html
@@ -9,8 +9,8 @@
   <body>
     <header>
       <img src="./logo.png" alt="logo spacex" />
-      <a href="#">| The Spaceships |</a>
-      <a href="#">Hire Us</a>
+      <a href="space.html">| The Spaceships |</a>
+      <a href="hire.html">Hire Us</a>
     </header>
     <main>
       <article>
