--- a/HTML 5/site-HTML/space.html
+++ b/HTML 5/site-HTML/space.html
@@ -6,5 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sapce - Page</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="home.html"><img src="./logo.png" alt="logo spacex" /></a>
+      <a href="space.html">| The Spaceships |</a>
+      <a href="hire.html">Hire Us</a>
+      <hr />
+    </header>
+    <main>
+      <h2>Available Spaceships</h2>
+      <br /><br />
+      <h3>Falcon 9</h3>
+      <img src="./falcon_9.jpg" alt="" />
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem
+        quibusdam iste labore voluptates, sequi sunt error deserunt molestias
+        corporis at, optio est dolorem quasi quas velit sint cum fugit magnam.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nam fugit
+        aspernatur eveniet eaque alias harum laborum neque odio? Suscipit
+        voluptatem atque autem voluptatibus. Voluptates harum quam quia in iure!
+      </p>
+      <hr />
+      <h3>FALCON HEAVY</h3>
+      <img src="./falcon_heavy.jpg" alt="" />
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim est
+        aliquid qui porro repellendus nobis a, aspernatur ad minima, error
+        tenetur! Necessitatibus, quaerat voluptatibus! Quam, asperiores? Ducimus
+        alias unde temporibus. Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Aspernatur ducimus labore modi fugit eaque corrupti
+        iure deleniti totam? Accusamus, atque tenetur. Commodi a harum aliquid
+        qui soluta illum fugit nostrum!
+      </p>
+    </main>
+  </body>
 </html>
